--- a/COSE471/COSE471_2022sp_hw1.ipynb
+++ b/COSE471/COSE471_2022sp_hw1.ipynb
@@ -171,35 +171,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "def variance(population):\n",
-    "    \"\"\"\n",
-    "    Compute the variance of population (sigma squared).\n",
-    "\n",
-    "    Args:\n",
-    "        population: a numpy array of numbers of shape [N,]\n",
-    "    Returns:\n",
-    "        the variance of population\n",
-    "    \"\"\"\n",
-    "    # Calculate the variance of a population\n",
-    "    # BEGIN YOUR CODE\n",
-    "    # -----------------------\n",
-    "    sum = 0\n",
-    "    for i in range(population.size):\n",
-    "        sum += population[i]\n",
-    "\n",
-    "    mean = sum / population.size\n",
-    "\n",
-    "    var = 0\n",
-    "    for i in range(population.size):\n",
-    "        var += (population[i] - mean) ** 2\n",
-    "\n",
-    "    var /= population.size\n",
-    "\n",
-    "    return var\n",
-    "    # -----------------------\n",
-    "    # END YOUR CODE\n",
     "def mean(population):\n",
     "    \"\"\"\n",
     "    Compute the mean of population (mu).\n",
@@ -218,6 +189,31 @@
     "\n",
     "    mean = sum / population.size\n",
     "    return mean\n",
+    "    # -----------------------\n",
+    "    # END YOUR CODE\n",
+    "\n",
+    "\n",
+    "def variance(population):\n",
+    "    \"\"\"\n",
+    "    Compute the variance of population (sigma squared).\n",
+    "\n",
+    "    Args:\n",
+    "        population: a numpy array of numbers of shape [N,]\n",
+    "    Returns:\n",
+    "        the variance of population\n",
+    "    \"\"\"\n",
+    "    # Calculate the variance of a population\n",
+    "    # BEGIN YOUR CODE\n",
+    "    # -----------------------\n",
+    "    m = mean(population)\n",
+    "\n",
+    "    var = 0\n",
+    "    for i in range(population.size):\n",
+    "        var += (population[i] - m) ** 2\n",
+    "\n",
+    "    var /= population.size\n",
+    "\n",
+    "    return var\n",
     "    # -----------------------\n",
     "    # END YOUR CODE"
    ]
@@ -1094,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {
     "id": "4lxlowgE_RuM"
    },
@@ -1124,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {
     "id": "Qv50d2Sp_RuN"
    },
@@ -1157,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1172,7 +1168,7 @@
        "0.06807524986273816"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1188,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {
     "id": "gEy-cYZH_RuN"
    },
@@ -1223,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1238,7 +1234,7 @@
        "0.23550361568476286"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {
     "id": "oJSZSoLA_RuN"
    },
@@ -1342,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {
     "id": "NmyCmncB_RuN"
    },
@@ -1369,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1384,7 +1380,7 @@
        "True"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "metadata": {
     "id": "e_vYNELE_RuN"
    },
@@ -1432,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "metadata": {
     "id": "eDj4Qu4l_RuO"
    },
@@ -1464,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "metadata": {
     "id": "15lwF7LD_RuO"
    },
@@ -1484,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 27,
    "metadata": {
     "id": "OhP9qhP8_RuO"
    },
@@ -1521,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "metadata": {
     "id": "8fF6m2mV_RuO"
    },
@@ -1550,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 29,
    "metadata": {
     "id": "WMAGKFAy_RuO"
    },
@@ -1581,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1593,10 +1589,10 @@
     {
      "data": {
       "text/plain": [
-       "0.69582"
+       "0.69223"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1613,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 31,
    "metadata": {
     "id": "xkbp-XXm_RuO"
    },
