chore(COSE471_hw2): merge dataframe using df.merge

--- a/COSE471/HW2/HW2.ipynb
+++ b/COSE471/HW2/HW2.ipynb
@@ -2539,7 +2539,7 @@
    "source": [
     "# BEGIN YOUR CODE\n",
     "# -----------------------\n",
-    "agg_cols = list(movies.select_dtypes(include=[\"int64\"]).columns)\n",
+    "agg_cols = [\"rating\", \"revenue\"]\n",
     "# -----------------------\n",
     "# END YOUR CODE"
    ],
@@ -3022,7 +3022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-28T09:57:19.130945Z",
@@ -3041,19 +3041,14 @@
    "source": [
     "# BEGIN YOUR CODE\n",
     "# -----------------------\n",
-    "baby_names_filtered = count_for_names.to_frame().loc[count_for_names.index.isin(movies[\"director\"])]\n",
-    "movies_filtered = movies.loc[movies[\"director\"].isin(baby_names_filtered.index)].reset_index(drop=True)\n",
-    "\n",
-    "baby_names_filtered = baby_names_filtered.loc[movies_filtered[\"director\"]].reset_index()\n",
-    "\n",
-    "merged_df = pd.concat([movies_filtered, baby_names_filtered[\"Count\"]], axis=1)\n",
+    "merged_df = movies.merge(count_for_names.to_frame(), how=\"inner\", left_on=\"director\", right_on=\"Name\")\n",
     "# -----------------------\n",
     "# END YOUR CODE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-28T09:57:19.632861Z",
